# forseti.fun

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
bots/odin_bot/: README.md  setup.py
bots/odin_bot/odin_bot/: odin_bot.py
bots/x_bot/: README.md  setup.py
bots/x_bot/x_bot/: x_bot.py
models/: README.md
scripts/: model_loader.py
src/forsetidotfun_backend/: Cargo.toml  forsetidotfun_backend.did
src/forsetidotfun_backend/bots/x_bot/: README.md  setup.py  x_bot.py
src/forsetidotfun_backend/src/: lib.rs  model_api.rs  web_api.rs  x_api.rs
src/forsetidotfun_frontend/: index.html  package.json
src/forsetidotfun_frontend/public/: .ic-assets.json5
src/forsetidotfun_frontend/public/.well-known/: ic-domains
src/forsetidotfun_frontend/src/: Agent.js  App.vue  index.scss  main.js
src/forsetidotfun_frontend/src/components/: Footer.vue  Header.vue
src/forsetidotfun_frontend/src/router/: index.js
src/forsetidotfun_frontend/src/views/: About.vue  Home.vue
